...
              <Text
                style={[
                  styles.editModeButtonText,
                  isEditMode && styles.editModeButtonTextActive,
                ]}
              >
                {saving ? "저장 중..." : isEditMode ? "완료" : "수정"}
              </Text>
            </TouchableOpacity>
          ) : null}
        </View>
      </View>

...
